renamed Scotty/org.scott to Expecty/org.expecty improved build and made kepler a git submodule improvements to value recording improvements to output rendering ability to have multiple conditions in the same expect statement introduced expect options